<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">ToDoList</string>
	<string name="add">添加</string>
	<string name="word">时间就是金钱</string>
	<string name="task_pri">任务等级</string>
	<string name="task_finish_time">完成日期</string>
	<string name="pri_1">1</string>
	<string name="pri_2">2</string>
	<string name="pri_3">3</string>
	<string name="logup">注册</string>
	<string name="login">登陆</string>
</resources>
